--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -3,12 +3,16 @@
     padding:0;
     border:0;
 }
+html{
+    background:#000 url(../img/bg.png); 
+}
 html, body{
     width:100%;
     height:100%;
+    /*
     position:relative;
     overflow:hidden;
-    background:black url(../img/bg.png);
+    */
     font-size:13px;
     -webkit-user-select:none;
     user-select:none;
@@ -21,7 +25,7 @@ body > div{
     padding:2%;
     min-height:130px;
     margin-left:-37%;
-    margin-top:-65px;
+    margin-top:-90px;
     font-family:sans-serif;
     color:#ffffff;
     text-align:center;
